@@ -1,5 +1,14 @@
 2014-07-18  Filip Pizlo  <fpizlo@apple.com>
 
+        Exception fuzzing should work on iOS
+        https://bugs.webkit.org/show_bug.cgi?id=135070
+
+        Reviewed by Mark Hahnenberg.
+
+        * tests/exceptionFuzz.yaml:
+
+2014-07-18  Filip Pizlo  <fpizlo@apple.com>
+
         Fix cloop build.
 
         * jsc.cpp:
